# pompomcrawler

./: .gitignore  README.md  amplify.yml  pyproject.toml  requirements-lambda.txt
.github/workflows/: deploy-amplify.yml
config/: sources.yml
docs/: admin.html  index.html
infra/: app.py  cdk.json  pompomcrawler_stack.py
samples/: manual_items.csv
src/pompomcrawler/: __init__.py  aggregation.py  aws_handlers.py  aws_keys.py  checklist.py  cli.py  config.py  dynamodb_store.py  exporter.py  extract.py  fetchers.py  html_calendar.py  manual.py  models.py  schedule_window.py  storage.py  url_policy.py
tests/: test_aggregation.py  test_aws_backend.py  test_exporter.py  test_extract.py  test_fetchers.py  test_schedule_window.py  test_storage.py  test_url_policy.py
