[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pompomcrawler"
version = "0.1.0"
description = "Collect Pom Pom Purin product and event information into reviewable CSV/XLSX schedules."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "feedparser>=6.0.11",
  "openai>=1.68.0",
  "openpyxl>=3.1.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
pompomcrawler = "pompomcrawler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
